--- a/ProjectSelector/AndroidManifest.xml
+++ b/ProjectSelector/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk 
-        android:minSdkVersion="14" 
+    <uses-sdk
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
     <application
@@ -13,18 +13,37 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:label="@string/app_name"
-            android:name=".MainActivity" >
-            <intent-filter >
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="InClass0604Activity" android:label="@string/name_inClass0604" android:description="@string/text_inClass0604"></activity>
-        <activity android:label="@string/label_assignment1" android:description="@string/description_assignment1" android:name="assignment1Activity"></activity>
-        <activity android:label="@string/hint_assignment2button" android:name="Assignment2Activity"></activity>
-		<activity android:label="@string/hint_colorblenderbutton" android:name="ColorBlenderActivity"></activity>
-		</application>
+        <activity
+            android:name="InClass0604Activity"
+            android:description="@string/text_inClass0604"
+            android:label="@string/name_inClass0604" >
+        </activity>
+        <activity
+            android:name="assignment1Activity"
+            android:description="@string/description_assignment1"
+            android:label="@string/label_assignment1" >
+            <intent-filter>
+                <action android:name="edu.msudenver.CS390H.PICK_COLOR" />
+
+                <data android:mimeType="number/integer" />
+
+                <category android:name="android.intent.category.CATEGORY_DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="Assignment2Activity"
+            android:label="@string/hint_assignment2button" >
+        </activity>
+        <activity android:name="ColorBlenderActivity" >
+        </activity>
+    </application>
 
 </manifest>
